vz.conf(5), vzctl(8): fix/improve description of CONFIGFILE and --config
1. In vzctl(8) it was incorrectly stated that if CT config exists,
   it will be overwritten. This is not true since Oct 2008 / vzctl 3.0.23
   (commit e305c86).

2. In vz.conf(5) it was not clear what exact file is to be used. Fix it.

3. In vzctl(8) it was not mentioned that --config is an override for CONFIGFILE.

4. In vzctl(8) it was not mentioned that --config can't be used if CT config exists.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -93,8 +93,10 @@ files and directories specific to that container are stored. Value must contain
 literal string \fB$VEID\fR, which will be substituted with the actual
 numeric CT ID.
 .IP \fBCONFIGFILE\fR=\fIname\fR
-Default configuration file for \fBcreate\fR action, corresponds to
-\fB--config\fR option.
+Default configuration file
+(\f(CW\fB/etc/vz/conf/ve-\fIname\fR\f(CW\fB.conf-sample\fR)
+used to create a new container. Corresponds to \fB--config\fR
+option of \fBvzctl create\fR.
 .IP \fBIPTABLES\fR="\fImodule\ module\ ...\fR"
 List of iptables modules to be enabled for containers, corresponds
 to \fB--iptables\fR option.
