ploop: introduce VE_LAYOUT / --layout
Now one can choose whether to put a new CT on ploop or use old simfs.

First, there is a global VE_LAYOUT parameter in vz.conf.
Second, there is a --layout option for vzctl create.
Default for now is simfs (might be changed in the future).

If ploop is requested, a check is performed if ploop is supported by the kernel.

Man pages and bash_completion modified accordingly.

(this is an implementation of TODO1 mentioned in commit 27cea49)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -88,6 +88,10 @@ Default configuration file
 (\f(CW\fB/etc/vz/conf/ve-\fIname\fR\f(CW\fB.conf-sample\fR)
 used to create a new container. Corresponds to \fB--config\fR
 option of \fBvzctl create\fR.
+.IP \fBVE_LAYOUT\fR=\fBploop\fR|\fBsimfs\fR
+Default CT filesystem layout for a new container, can either be
+\fBploop\fR or \fBsimfs\fR.
+Corresponds to \fB--layout\fR option of \fBvzctl create\fR.
 
 .SS Defaults for containers
 
