vzctl console: implement SAK on detach
And add an option to detach w/o SAK (ESC ,)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -885,8 +885,9 @@ Attach to the container's console. Note that the console is persistent,
 meaning it can be attached to even if the container is not running,
 and there is no automatic detachment when the container is stopped.
 
-Type \fBEsc\fR then \fB.\fR to detach from the console. Note that
-this sequence is only recognized after \fBEnter\fR.
+Type \fBEsc\fR then \fB.\fR to detach from the console.
+Type \fBEsc\fR then \fB,\fR to detach without killing anything.
+Note that these sequences are only recognized after \fBEnter\fR.
 
 .SS Other options
 
