man/vzctl.8: fixed ploop-enabled kernel version
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -838,8 +838,8 @@ to execution of \fBumount\fR and \fBpostumount\fR action scripts
 
 Note that \fBstop\fR does \fBumount\fR automatically.
 .IP "\fBconvert\fR \fICTID\fR" 4
-Convert CT private area to reside on a ploop device (available
-since 042stab052.6 kernel). Conversion should be performed when
+Convert CT private area to reside on a ploop device (available in kernel
+version 042stab052.8 and greater). Conversion should be performed when
 a container is stopped, plus disk space quota should be set.
 .IP "\fBquotaon\fR \fIctid\fR" 4
 Turn disk quota on. Not that \fBmount\fR and \fBstart\fR does that
